--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,8 @@ dependencies = [
     "torchvision (>=0.22.1,<0.23.0)",
     "torchaudio (>=2.7.1,<3.0.0)",
     "pykitti (>=0.3.1,<0.4.0)",
-    "opencv-python (>=4.11.0.86,<5.0.0.0)"
+    "opencv-python (>=4.11.0.86,<5.0.0.0)",
+    "open3d (>=0.19.0,<0.20.0)"
 ]
 
 
