--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,11 @@ dependencies = [
     "torchaudio (>=2.7.1,<3.0.0)",
     "pykitti (>=0.3.1,<0.4.0)",
     "opencv-python (>=4.11.0.86,<5.0.0.0)",
-    "open3d (>=0.19.0,<0.20.0)"
+    "open3d (>=0.19.0,<0.20.0)",
+    "pyceres (>=2.4,<3.0)",
+    "pyqtgraph (>=0.13.7,<0.14.0)",
+    "pyqt5 (>=5.15.11,<6.0.0)",
+    "pyopengl (>=3.1.9,<4.0.0)"
 ]
 
 
