--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,8 @@ dependencies = [
     "pyceres (>=2.4,<3.0)",
     "pyqtgraph (>=0.13.7,<0.14.0)",
     "pyqt5 (>=5.15.11,<6.0.0)",
-    "pyopengl (>=3.1.9,<4.0.0)"
+    "pyopengl (>=3.1.9,<4.0.0)",
+    "rendering (>=0.0.0,<0.0.1)"
 ]
 
 
