--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,9 @@ dependencies = [
     "pyqtgraph (>=0.13.7,<0.14.0)",
     "pyqt5 (>=5.15.11,<6.0.0)",
     "pyopengl (>=3.1.9,<4.0.0)",
-    "rendering (>=0.0.0,<0.0.1)"
+    "rendering (>=0.0.0,<0.0.1)",
+    "transforms3d (>=0.4.2,<0.5.0)",
+    "numpy (==1.26.4)"
 ]
 
 
