--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = [
     {name = "baldhat",email = "michel.jonathan@proton.me"}
 ]
 readme = "README.md"
-requires-python = ">=3.11"
+requires-python = ">=3.11,<3.14"
 dependencies = [
     "torch (>=2.7.1,<3.0.0)",
     "torchvision (>=0.22.1,<0.23.0)",
@@ -16,11 +16,13 @@ dependencies = [
     "open3d (>=0.19.0,<0.20.0)",
     "pyceres (>=2.4,<3.0)",
     "pyqtgraph (>=0.13.7,<0.14.0)",
-    "pyqt5 (>=5.15.11,<6.0.0)",
     "pyopengl (>=3.1.9,<4.0.0)",
     "rendering (>=0.0.0,<0.0.1)",
     "transforms3d (>=0.4.2,<0.5.0)",
-    "numpy (==1.26.4)"
+    "numpy (==1.26.4)",
+    "numpy-quaternion (>=2024.0.12,<2025.0.0)",
+    "line-profiler (>=5.0.0,<6.0.0)",
+    "autograd (>=1.8.0,<2.0.0)"
 ]
 
 
